--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@fullcalendar/bootstrap": "^5.8.0",
-    "@fullcalendar/core": "^5.8.0",
-    "@fullcalendar/daygrid": "^5.8.0",
-    "@fullcalendar/interaction": "^5.8.0",
-    "@fullcalendar/list": "^5.8.0",
-    "@fullcalendar/react": "^6.1.8",
-    "@fullcalendar/timegrid": "^5.8.0",
+    "@fullcalendar/bootstrap": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^2.6.0",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.19.0",
+    "axios-mock-adapter": "^2.0.0",
     "bootstrap": "5.3.0-alpha1",
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
@@ -64,7 +64,6 @@
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
-    
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
@@ -93,28 +92,28 @@
     ]
   },
   "devDependencies": {
-    "@types/sortablejs": "^1.10.7",
-    "postcss-custom-properties": "^12.1.4",
-    "prettier": "^2.3.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "17.0.0",
     "@types/react-albus": "^2.0.6",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-bootstrap-typeahead": "^5.1.7",
     "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-draft-wysiwyg": "^1.13.3",
-    "@types/html-to-draftjs": "^1.4.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "17.0.0",
     "@types/react-redux": "^7.1.17",
     "@types/react-select": "^4.0.17",
     "@types/react-table": "^7.7.2",
     "@types/react-text-mask": "^5.4.9",
-    "@types/redux-saga": "^0.10.5"
+    "@types/redux-saga": "^0.10.5",
+    "@types/sortablejs": "^1.10.7",
+    "postcss-custom-properties": "^12.1.4",
+    "prettier": "^2.3.2"
   },
   "resolutions": {
     "postcss-custom-properties": "^12.1.4",
